--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "runway-node-example",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/hostwithquantum/runway-node-example.git"
+    "type": "git",
+    "url": "https://github.com/hostwithquantum/runway-node-example.git"
   },
   "license": "MIT",
   "engines": {
     "node": "v16.*"
   },
-  "dependencies": {
-    "express": "4.15.x"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "node server.js"
   }
